--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "vue-weather",
   "version": "0.0.0",
+  "homepage": "https://naveenpanwar9003.github.io/WeatherApp-vuejs/",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "vite build && cd dist && git add . &&  git commit -m 'okok' && git push -u origin build",
     "preview": "vite preview --port 5050"
   },
   "dependencies": {
