--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "homepage": "https://naveenpanwar9003.github.io/WeatherApp-vuejs/",
   "scripts": {
     "dev": "vite",
-    "build": "vite build && cd dist  &&  git commit -am 'okok' && git push -u origin build",
+    "build": "vite build",
+    "deploy": "cd dist  && git add . &&  git commit -m 'okok' && git push -u origin build",
     "preview": "vite preview --port 5050"
   },
   "dependencies": {
